--- a/source/pages/components/partials/register.njk
+++ b/source/pages/components/partials/register.njk
@@ -3,31 +3,6 @@
 
 <!-- Icon Section -->
 
-<section class="icon-section">
-
-    <div class="text-align-center icon-row grid">
-		<h2 class="text-align-right icon-row-heading register-h2">get your ticket now</h2>
-        <figure class="icon grid__col grid__col--1-of-4 grid__col--m-1-of-4 grid__col--s-1-of-4">
-            <img class="icon-image" src="../assets/graphics/icons/food.svg" alt="Icon" class="icon-image"/>
-            <figcaption class="icon-label">Food</figcaption>
-        </figure><!--
-
-        --><figure class="icon grid__col grid__col--1-of-4 grid__col--m-1-of-4 grid__col--s-1-of-4">
-            <img class="icon-image" src="../assets/graphics/icons/network.svg" alt="Icon" class="icon-image"/>
-            <figcaption class="icon-label">Network</figcaption>
-        </figure><!--
-
-        --><figure class="icon grid__col grid__col--1-of-4 grid__col--m-1-of-4 grid__col--s-1-of-4">
-            <img class="icon-image" src="../assets/graphics/icons/swag.svg" alt="Icon" class="icon-image"/>
-            <figcaption class="icon-label">Swag</figcaption>
-        </figure><!--
-
-        --><figure class="icon grid__col grid__col--1-of-4 grid__col--m-1-of-4 grid__col--s-1-of-4">
-            <img class="icon-image" src="../assets/graphics/icons/party.svg" alt="Icon" class="icon-image"/>
-            <figcaption class="icon-label">Fun</figcaption>
-        </figure>
-    </div>
-</section>
 
 <!-- Registration Form Section -->
 
@@ -35,9 +10,7 @@
 
 
     <div class="form-row">
-		<div class="form-row-heading">
-	        <h2 class="text-align-right icon-row-heading form-row-title ">ready, set, register</h2>
-	    </div>
+
         <form class="text-align-center input-form grid" id="registerForm" method="post" action="review.php">
 
             <p class="text-align-left form-message">Now that we have your attention -</p>
@@ -94,7 +67,7 @@
             </div>
 
             <div class="input-field grid__col grid__col--1-of-2 grid__col--m-1-of-2">
-                <input class="form__input input-text" type="text" id="coupon" name="coupon" placeholder="Have a discount code?">
+                <input class="" type="text" id="coupon" name="coupon" placeholder="Have a discount code?">
                 <div class="coupon-container">
                     <div class="coupon-status coupon-success">
                         Valid Coupon
