almost done with review

--- a/source/pages/components/layout2018.njk
+++ b/source/pages/components/layout2018.njk
@@ -48,8 +48,9 @@
 </head>
 
 <body class="dotGrid-background">
+{% include "partials/register2018-nav.njk" %}
 	{% block content %}
-
+    
  	{% endblock %}
 	<!-- Load scripts. -->
 </body>
