--- a/source/pages/register.njk
+++ b/source/pages/register.njk
@@ -12,7 +12,7 @@
     {# {% import 'macros/header-macro.njk' as header %} #}
 
     {# {{header.pageNames( 'Register' )}} #}
-
+{% include "partials/register2018-nav.njk" %}
     <div class="container register2018-container">
         {% include "partials/register-ticket.njk" %}
         {% include "partials/register2018.njk" %}
