--- a/source/pages/components/layout-review2018.njk
+++ b/source/pages/components/layout-review2018.njk
@@ -192,15 +192,15 @@
 
 
 
-  if(strtolower($coupon) == strtolower('Free0TAW17') ){
+  if(strtolower($coupon) == strtolower('free_bird_18') ){
 
     $adjustedAmount = '0';
 
-  }else if(strtolower($coupon) == strtolower('30ISBETTERTHAN40')){
+  }else if(strtolower($coupon) == strtolower('taw_early_bird_2018')){
 
     $adjustedAmount = '30';
 
-  }else if($numOrders < 100 && strtotime("1 October 2017") > strtotime('now')){
+  }else if($numOrders < 100 && strtotime("1 October 2018") > strtotime('now')){
 
     $adjustedAmount = '35';
 
