--- a/source/pages/components/partials/register2018-nav.njk
+++ b/source/pages/components/partials/register2018-nav.njk
@@ -1,6 +1,7 @@
-<div class="flex flex-justify-center register2018-nav">
+<div class="flex flex-justify-center flex-align-center register2018-nav">
   <img
     class="register2018-logo"
     src="http://thoughtatwork.cias.rit.edu/assets/graphics/icons/register2018-navLogo.svg"
   />
+  <p class="register2018-link">Thought At Work 2018 Registration</p>
 </div>
