--- a/source/pages/success.njk
+++ b/source/pages/success.njk
@@ -1,20 +1,20 @@
 <!-- app/pages/register.njk-->
-{% extends "layout-success.njk" %}
+{% extends "layout-success2018.njk" %}
 
 {% block title %}
     Success
 {% endblock %}
 {% block content %}
 
-    {% import 'macros/nav-macro.njk' as nav %}
+    {# {% import 'macros/nav-macro.njk' as nav %}
     {{nav.active('register')}}
 
     {% import 'macros/header-macro.njk' as header %}
 
-    {{header.pageNames( 'Success' )}}
+    {{header.pageNames( 'Success' )}} #}
 
-    <div class="container">
-        {% include "partials/success.njk" %}
-        {% include "partials/footer.njk" %}
+    <div class="container register2018-container">
+        {% include "partials/success2018.njk" %}
+        {# {% include "partials/footer.njk" %} #}
     </div>
 {% endblock %}
