--- a/source/styles/components/_register2018-form.scss
+++ b/source/styles/components/_register2018-form.scss
@@ -104,7 +104,7 @@
             font-size: 18px;
             font-weight: 500;
             cursor: pointer;
-            margin: 9px 0 0 0;
+            margin: 0;
             border: 0;
             padding: 0;
             background-color: transparent;
