--- a/source/styles/components/_register2018-form.scss
+++ b/source/styles/components/_register2018-form.scss
@@ -250,3 +250,12 @@
     display: inline-block;
     vertical-align: middle;
 }
+
+textarea:focus,
+input:focus {
+    outline: none;
+}
+
+*:focus {
+    outline: none;
+}
